feat(match-card): show rating after
